# tinkoff-transaction-analyzer

./: .env_template  .flake8  .gitignore  pyproject.toml  test_real_data.py  user_settings.json
data/: generate_data.py  generate_operations.py  generate_sample_data.py  operations.xlsx
src/: utils.py
tests/: test_filter.py  test_utils.py
